--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "lodash": "^2.4.1",
     "mercator": "^0.1.9",
+    "rewire": "^2.1.3",
     "source-map-support": "^0.2.8",
     "traceur": "0.0.78",
     "traceur-runtime": "0.0.59"
