glob parses resources down pipeline.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "bluebird": "^2.3.11",
+    "glob": "^4.2.1",
     "lodash": "^2.4.1",
     "mercator": "^0.1.9",
     "rewire": "^2.1.3",
