--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "glob": "^4.2.1",
     "lodash": "^2.4.1",
     "mercator": "^0.1.9",
+    "mkdirp": "^0.5.0",
     "rewire": "^2.1.3",
     "source-map-support": "^0.2.8",
     "traceur": "0.0.78"
