--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "gaze": "0.5.1",
     "glob": "^4.2.1",
     "lodash": "^2.4.1",
-    "mercator": "^0.1.9",
+    "mercator": "git://github.com/chilon-net/mercator#bb2fe70",
     "mkdirp": "^0.5.0",
     "rewire": "^2.1.3",
     "source-map-support": "^0.2.8",
