--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sigh",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Another tool for managing web asset pipelines",
   "main": "index",
   "directories": {
@@ -32,8 +32,10 @@
     "mercator": "git://github.com/chilon-net/mercator#d7fd7cf",
     "mkdirp": "^0.5.0",
     "rewire": "^2.1.3",
-    "source-map-support": "^0.2.8",
-    "traceur": "0.0.78"
+    "source-map-support": "^0.2.8"
+  },
+  "peerDependencies": {
+    "traceur": "^0.0.79"
   },
   "devDependencies": {
     "chai": "^1.10.0",
