--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "mkdirp": "^0.5.0",
     "rewire": "^2.1.3",
     "source-map-support": "^0.2.8",
-    "traceur": "^0.0.79"
+    "traceur": "0.0.84"
   },
   "devDependencies": {
     "chai": "^1.10.0",
