--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "baconjs": "^0.7.52",
     "bluebird": "2.9.13",
     "chokidar": "^1.0.0-rc3",
+    "fs-extra": "^0.16.3",
     "glob": "4.4.1",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "^0.6.0",
@@ -35,7 +36,6 @@
     "grunt-mocha-test": "^0.12.4",
     "jit-grunt": "0.9.1",
     "lodash": "3.3.1",
-    "mkdirp": "0.5.0",
     "rewire": "2.1.3",
     "source-map-support": "0.2.9",
     "traceur": "0.0.85"
