--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "baconjs": "^0.7.52",
     "bluebird": "2.9.13",
     "chokidar": "^1.0.0-rc3",
+    "esprima": "^2.0.0",
     "fs-extra": "^0.16.3",
     "glob": "4.4.1",
     "grunt": "0.4.5",
@@ -37,6 +38,7 @@
     "jit-grunt": "0.9.1",
     "lodash": "3.3.1",
     "rewire": "2.1.3",
+    "source-map": "^0.4.0",
     "source-map-support": "0.2.9",
     "traceur": "0.0.85"
   },
