--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "chokidar": "^1.0.0-rc3",
     "esprima": "^2.0.0",
     "fs-extra": "^0.16.3",
-    "glob": "4.4.1",
+    "glob": "^5.0.1",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
