--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sigh",
-  "version": "0.6.6",
+  "version": "0.7.0",
   "description": "A web asset-pipeline combining the best features of existing state of the art.",
   "main": "index",
   "directories": {
@@ -25,25 +25,25 @@
     "url": "https://github.com/sighjs/sigh/issues"
   },
   "dependencies": {
-    "babel": "^4.6.6",
     "baconjs": "^0.7.52",
     "bluebird": "2.9.13",
     "chokidar": "^1.0.0-rc3",
     "esprima": "^2.0.0",
     "fs-extra": "^0.16.3",
     "glob": "^5.0.1",
+    "lodash": "3.3.1",
+    "rewire": "2.1.3",
+    "source-map": "^0.4.0"
+  },
+  "devDependencies": {
+    "babel": "^4.6.6",
+    "chai": "^1.10.0",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-mocha-test": "^0.12.4",
     "jit-grunt": "0.9.1",
-    "lodash": "3.3.1",
-    "rewire": "2.1.3",
-    "source-map": "^0.4.0",
+    "mocha": "^2.0.1",
     "source-map-support": "0.2.9"
-  },
-  "devDependencies": {
-    "chai": "^1.10.0",
-    "mocha": "^2.0.1"
   }
 }
