--- a/package.json
+++ b/package.json
@@ -27,23 +27,23 @@
     "baconjs": "~0.7.52",
     "bluebird": "~2.9.13",
     "chokidar": "~1.0.0-rc3",
-    "esprima": "~2.0.0",
-    "fs-extra": "~0.16.3",
+    "esprima": "~2.1.0",
+    "fs-extra": "~0.18.0",
     "glob": "~5.0.1",
-    "lodash": "3.3.1",
+    "lodash": "~3.6.0",
     "process-pool": "~0.2.6",
-    "rewire": "2.1.3",
+    "rewire": "~2.3.1",
     "source-map": "~0.4.0"
   },
   "devDependencies": {
     "babel": "~4.6.6",
-    "chai": "~1.10.0",
-    "grunt": "0.4.5",
+    "chai": "~2.2.0",
+    "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-mocha-test": "~0.12.4",
-    "jit-grunt": "0.9.1",
-    "mocha": "~2.0.1",
-    "source-map-support": "0.2.9"
+    "jit-grunt": "~0.9.1",
+    "mocha": "~2.2.1",
+    "source-map-support": "~0.2.10"
   }
 }
