--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
     "grunt": "~0.4.5",
     "mocha": "~2.2.1",
     "sigh-cli": "^0.2.1",
-    "sigh-mocha": "~0.0.2"
+    "sigh-mocha": "^0.0.3"
   }
 }
