--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chai": "~2.2.0",
     "grunt": "~0.4.5",
     "mocha": "~2.2.1",
+    "sigh": "^0.11.0",
     "sigh-cli": "^0.2.1",
     "sigh-mocha": "^0.0.3"
   }
