--- a/package.json
+++ b/package.json
@@ -32,14 +32,16 @@
     "lodash": "^3.6.0",
     "process-pool": "^0.3.1",
     "rewire": "~2.3.1",
-    "sigh-core": "^0.11.1",
+    "sigh-core": "^0.11.3",
     "source-map": "^0.4.0",
-    "source-map-support": "^0.2.10"
+    "source-map-support": "^0.2.10",
+    "vinyl": "^0.4.6"
   },
   "devDependencies": {
     "babel": "^5.0.8",
     "chai": "^2.2.0",
     "grunt": "^0.4.5",
+    "gulp-uglify": "^1.2.0",
     "mocha": "^2.2.1",
     "sigh": "^0.12.0",
     "sigh-babel": "^0.11.0",
