--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "./lib"
   },
   "scripts": {
-    "test": "grunt build && sigh"
+    "test": "./bootstrap.sh && sigh"
   },
   "repository": {
     "type": "git",
@@ -40,7 +40,6 @@
   "devDependencies": {
     "babel": "^5.0.8",
     "chai": "^2.2.0",
-    "grunt": "^0.4.5",
     "gulp-uglify": "^1.2.0",
     "mocha": "^2.2.1",
     "sigh": "^0.12.0",
