--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sigh",
   "version": "0.12.21",
-  "description": "sigh, the declarative functional reactive build system for the web and io.js/node.js.",
+  "description": "the fastest and most expressive build system for the web and node.js/io.js",
   "main": "index",
   "directories": {
     "lib": "./lib"
