--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   "bugs": {
     "url": "https://github.com/sighjs/sigh/issues"
   },
+  "engines" : {
+    "iojs" : ">=1.3.0 <4.0.0",
+    "node": ">=0.10.0 <0.13.0"
+  },
   "dependencies": {
     "bluebird": "^2.9.13",
     "chokidar": "^1.0.0",
