--- a/package.json
+++ b/package.json
@@ -42,12 +42,16 @@
     "vinyl": "^0.4.6"
   },
   "devDependencies": {
-    "babel": "^5.0.8",
+    "babel-core": "^6.9.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-stage-1": "^6.5.0",
     "chai": "^2.2.0",
     "gulp-uglify": "^1.2.0",
     "mocha": "^2.2.1",
     "sigh": "^0.12.0",
-    "sigh-babel": "^0.11.2",
+    "sigh-babel": "^0.12.0",
     "sigh-cli": "^0.2.1",
     "sigh-mocha": "^0.1.2",
     "temp": "^0.8.1"
